--- a/css/styles.css
+++ b/css/styles.css
@@ -87,13 +87,13 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
 }
-nav h1 {
+nav div h1 {
   margin: auto;
   padding: 25px;
+  text-align:center;
 }
-nav h1 a {
+nav div h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
@@ -128,7 +128,7 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map-container {
-  height: 300px;
+  height: 350px;
   width: 100%;
   background-color: #ccc;
 }
@@ -244,7 +244,7 @@ nav h1 a {
   top:0;
 }
 .inside #map-container {
-  height: 300px;
+  height: 350px;
   padding-top: 131px;
   width: 100%;
   background-color: #ccc;
@@ -348,6 +348,7 @@ nav h1 a {
 #reviews-list li div .name{
   color: #fff;  
   width: 50%;
+  font-size: 20px;
   text-align: left;
 }
 #reviews-list li .rating {
