--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 nav h1 a:hover,
 nav h1 a:focus {
   outline: none;
-  color: #FFA500;
-  
+  color: #FFA500;  
 }
 #footer a strong:hover,
 nav a strong:focus {
@@ -85,15 +84,15 @@ nav a strong:focus {
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  
   background-color: #252831;
 }
-nav div h1 {
+nav h1 {
   margin: auto;
   padding: 25px;
   text-align:center;
 }
-nav div h1 a {
+nav h1 a {
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
