--- a/css/styles.css
+++ b/css/styles.css
@@ -291,19 +291,24 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 10px 40px 30px;
-  width: calc(100% - 80px);
+  padding: 10px 20px 30px;
+  width: calc(100% - 40px);
+  max-width: 660px;
+  margin: auto;
 }
 #restaurant-container {
   order:1;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
   order:2;
 }
 #reviews-container table {
   width: 100%;
   display: block;
+  font-size: 24px;
+}
+table td {
+  font-size: 16px;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -327,6 +332,7 @@ nav h1 a {
   padding: 0 0px 20px;
   position: relative;
   width: 100%;
+  max-height: 350px;
 }
 
 #reviews-list li div {
@@ -338,6 +344,7 @@ nav h1 a {
 #reviews-list li div p{
   color: #fff;  
   width: 50%;
+  padding-top: 13px;
 }
 #reviews-list li div .date{
   color: #fff;  
@@ -349,6 +356,7 @@ nav h1 a {
   width: 50%;
   font-size: 20px;
   text-align: left;
+  padding-top: 21px;
 }
 #reviews-list li .rating {
   background-color: orange;
@@ -368,7 +376,7 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
-
+/*
 @media only screen and (min-width: 780px)  {
   
   #restaurant-container, #reviews-container {
@@ -376,16 +384,45 @@ nav h1 a {
     width: calc((100% - 80px)/2);
   }
   
-}
+}*/
 @media only screen and (min-width: 910px)  {
-  
   #restaurant-container, #reviews-container {
-    padding: 10px 30px 30px;
-    width: calc((100% - 120px)/2);
+    padding: 10px 20px 30px;
+    min-width: 900px;
+    margin: auto;
+    
+  }
+  #restaurant-container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurant-name{
+    width: 100%;
+  }
+  .card, #restaurant-hours{
+    width: calc((100% - 60px)/2);
+  }
+  #restaurant-hours{
+    padding-left: 60px;
+  }
+  #reviews-list{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #reviews-list li{
+    width: calc((100% - 60px)/3);
+    margin: 0 8px 30px;
   }
 }
 
 @media only screen and (min-width: 650px) and (max-width: 975px) {
+  #restaurant-container, #reviews-container {
+    max-width: 1400px;
+    margin: auto;
+    
+  }
   #restaurants-list li {
     width:calc((100% - 188px)/2);
   }  
@@ -394,4 +431,12 @@ nav h1 a {
   #restaurants-list li {
     width:calc((100% - 282px)/3);
   }
+  #restaurant-container, #reviews-container {
+    max-width: 1260px;
+    margin: auto;
+    
+  }
+  table td {
+    font-size: 20px;
+}
 }
