--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 12pt;
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,7 +14,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 12pt;
 	color: #333;
 }
 a {
@@ -40,7 +40,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color: #252831;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -122,7 +122,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #025092;
     text-decoration: none;
 }
 /* ====================== Map ====================== */
@@ -139,13 +139,13 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   height: 70px;
-  background-color: #3397DB;
+  background-color: #1A5B8F;
   align-items: center;
   padding: 5px 5px;
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -179,9 +179,10 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 17px 25px;
   text-align: left;
-  width:calc(100% - 90px);
+  padding: 0 17px 25px;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -201,12 +202,16 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+#restaurants-list li h3 {
+  margin: 11px 0px 20px;
+
+}
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #8A4600;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -258,7 +263,7 @@ nav h1 a {
   bottom: 0;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #6B3B00;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -311,7 +316,7 @@ table td {
   font-size: 16px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #6B3B00;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -359,7 +364,7 @@ table td {
   padding-top: 21px;
 }
 #reviews-list li .rating {
-  background-color: orange;
+  background-color: #8A4600;
   border-bottom: 3px solid #eee;
   border-radius: 4px;
   color: #fff;
@@ -376,67 +381,114 @@ table td {
 #restaurant-hours td {
   color: #666;
 }
-/*
-@media only screen and (min-width: 780px)  {
-  
-  #restaurant-container, #reviews-container {
-    padding: 10px 20px 30px;
-    width: calc((100% - 80px)/2);
+@media only screen and (max-width: 300px)  {
+  nav h1 a {
+    font-size: 13pt;
+    letter-spacing: 5px;
   }
-  
-}*/
-@media only screen and (min-width: 910px)  {
-  #restaurant-container, #reviews-container {
-    padding: 10px 20px 30px;
-    min-width: 900px;
-    margin: auto;
-    
+  .inside #map-container {
+    height: 252px;
   }
-  #restaurant-container{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+  #restaurant-name {
+    font-size: 17pt;
   }
-  #restaurant-name{
-    width: 100%;
+  #reviews-container h2 {
+    font-size: 17pt;
+ }
+}
+@media only screen and (max-width: 320px)  {
+  .filter-options {
+    height: 112px;
   }
-  .card, #restaurant-hours{
-    width: calc((100% - 60px)/2);
+  .filter-options h2 {
+    font-size: 1.1rem; 
+    margin: 0 5px;
   }
-  #restaurant-hours{
-    padding-left: 60px;
-  }
-  #reviews-list{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #reviews-list li{
-    width: calc((100% - 60px)/3);
-    margin: 0 8px 30px;
+  .filter-options select {
+    margin: 5px;
   }
 }
+@media only screen and (max-width: 400px)  {
+  
+  .filter-options select {
+    padding: 0;  
+  }
+  #restaurants-list li {
+    margin: 0 0 14px;
+    min-height: 380px;
+    padding: 0 ;
+    width: 100%;
+  }
+  #restaurants-list li h1 {
+    font-size: 17pt;
+    margin: 20px 0 10px;
+  }
+  #restaurants-list li h3 {
+    margin: 12px 15px 14px;
+  }
+  #restaurants-list p {
+    margin: 12px 15px 3px;
+  }
+  #restaurants-list li a {
+    margin: 12px 15px 14px;
+  }
+}
+@media only screen and (max-width: 500px)  {
+  #map-container {
+    height: 200px;
+  }
+  .filter-options h2 {
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (min-width: 870px) {
+  #restaurant-container, #reviews-container {
+    border-top: none;
+    width: calc((100% - 80px) / 2);
+    margin: inherit;
+  }
+}
+@media only screen and (min-width: 700px) {
+  #restaurants-list li {
+    margin: 5px;
+    min-height: 380px;
+    padding: 0 0 25px;
+    width: calc((100% - 28px) / 2);
 
-@media only screen and (min-width: 650px) and (max-width: 975px) {
-  #restaurant-container, #reviews-container {
-    max-width: 1400px;
-    margin: auto;
+  }
+  #restaurants-list li h1 {
+    font-size: 17pt;
+    margin: 20px 0 10px;
+  }
+  #restaurants-list li h3 {
+    margin: 12px 15px 14px;
+  }
+  #restaurants-list p {
+    margin: 12px 15px 3px;
+  }
+  #restaurants-list li a {
+    margin: 12px 15px 14px;
+  }
+  
+}
+@media only screen and (min-width: 800px){
+  #restaurants-list li {
+    padding: 0 17px 25px;
+    width: calc((100% - 96px) / 2);
     
   }
-  #restaurants-list li {
-    width:calc((100% - 188px)/2);
-  }  
 }
-@media only screen and (min-width: 975px) {
+@media only screen and (min-width: 950px) {
   #restaurants-list li {
-    width:calc((100% - 282px)/3);
-  }
-  #restaurant-container, #reviews-container {
-    max-width: 1260px;
-    margin: auto;
+    padding: 0;
+    width: calc((100% - 42px) / 3);
     
   }
-  table td {
-    font-size: 20px;
 }
+@media only screen and (min-width: 1200px) {
+  #restaurants-list li {
+    padding: 0 17px 25px;
+    width: calc((100% - 144px) / 3);
+    
+  }
 }
